# bad-apple-rust

./: .gitignore  Cargo.toml  README.md
src/: app.rs  handler.rs  lib.rs  main.rs  tui.rs  txt.rs  ui.rs
